/**
 * Tests for the BookingStatusPill component
 *
 * Covers:
 *  - All five booking statuses render the correct label
 *  - Each status applies the correct CSS colour class
 *  - The 'sm' (default) and 'md' size variants apply different padding/font classes
 *  - Unknown statuses fall back to PENDING appearance
 *  - Custom className is forwarded to the rendered element
 */

import React from 'react'
import { render, screen } from '@testing-library/react'
import { BookingStatusPill } from '@/components/providers/BookingStatusPill'

// ─── Helpers ─────────────────────────────────────────────────────────────────

/**
 * Render the pill and return the <span> element so we can inspect its className.
 */
function renderPill(status: string, size?: 'sm' | 'md', className?: string) {
  const { container } = render(
    <BookingStatusPill status={status} size={size} className={className} />,
  )
  // The root element is a <span>
  return container.querySelector('span') as HTMLSpanElement
}

// ─── Label tests ──────────────────────────────────────────────────────────────

describe('BookingStatusPill — labels', () => {
  it('shows "Pending" for PENDING status', () => {
    render(<BookingStatusPill status="PENDING" />)
    expect(screen.getByText('Pending')).toBeInTheDocument()
  })

  it('shows "Confirmed" for CONFIRMED status', () => {
    render(<BookingStatusPill status="CONFIRMED" />)
    expect(screen.getByText('Confirmed')).toBeInTheDocument()
  })

  it('shows "Completed" for COMPLETED status', () => {
    render(<BookingStatusPill status="COMPLETED" />)
    expect(screen.getByText('Completed')).toBeInTheDocument()
  })

  it('shows "Cancelled" for CANCELLED status', () => {
    render(<BookingStatusPill status="CANCELLED" />)
    expect(screen.getByText('Cancelled')).toBeInTheDocument()
  })

  it('shows "Declined" for DECLINED status', () => {
    render(<BookingStatusPill status="DECLINED" />)
    expect(screen.getByText('Declined')).toBeInTheDocument()
  })

  it('falls back to "Pending" label for an unknown status', () => {
    render(<BookingStatusPill status="UNKNOWN_STATUS" />)
    expect(screen.getByText('Pending')).toBeInTheDocument()
  })
})

// ─── Colour class tests ───────────────────────────────────────────────────────

describe('BookingStatusPill — colour classes', () => {
  it('applies amber classes for PENDING', () => {
    const span = renderPill('PENDING')
    expect(span.className).toContain('amber')
  })

  it('applies blue classes for CONFIRMED', () => {
    const span = renderPill('CONFIRMED')
    expect(span.className).toContain('blue')
  })

  it('applies emerald classes for COMPLETED', () => {
    const span = renderPill('COMPLETED')
    expect(span.className).toContain('emerald')
  })

  it('applies red classes for CANCELLED', () => {
    const span = renderPill('CANCELLED')
    expect(span.className).toContain('red')
  })

  it('applies gray classes for DECLINED', () => {
    const span = renderPill('DECLINED')
    expect(span.className).toContain('gray')
  })

  it('PENDING and DECLINED have different colour classes', () => {
    const pendingSpan = renderPill('PENDING')
    const declinedSpan = renderPill('DECLINED')
    expect(pendingSpan.className).not.toBe(declinedSpan.className)
  })

  it('CONFIRMED and CANCELLED have different colour classes', () => {
    const confirmedSpan = renderPill('CONFIRMED')
    const cancelledSpan = renderPill('CANCELLED')
    expect(confirmedSpan.className).not.toBe(cancelledSpan.className)
  })
})

// ─── Size variant tests ───────────────────────────────────────────────────────

describe('BookingStatusPill — size variants', () => {
  it('applies text-xs and smaller padding for size="sm" (default)', () => {
    const span = renderPill('PENDING', 'sm')
    expect(span.className).toContain('text-xs')
    expect(span.className).toContain('px-2.5')
    expect(span.className).toContain('py-1')
  })

  it('applies text-sm and larger padding for size="md"', () => {
    const span = renderPill('PENDING', 'md')
    expect(span.className).toContain('text-sm')
    expect(span.className).toContain('px-3')
    expect(span.className).toContain('py-1.5')
  })

  it('defaults to "sm" size when size prop is omitted', () => {
    // No size prop — should behave like sm
    const span = renderPill('CONFIRMED')
    expect(span.className).toContain('text-xs')
  })

  it('sm and md sizes produce different className strings', () => {
    const smSpan = renderPill('PENDING', 'sm')
    const mdSpan = renderPill('PENDING', 'md')
    expect(smSpan.className).not.toBe(mdSpan.className)
  })
})

// ─── Structural / accessibility tests ────────────────────────────────────────

describe('BookingStatusPill — structure', () => {
  it('renders a <span> element', () => {
    const { container } = render(<BookingStatusPill status="PENDING" />)
    expect(container.querySelector('span')).toBeInTheDocument()
  })

  it('renders an icon alongside the label text', () => {
    const { container } = render(<BookingStatusPill status="PENDING" />)
    // The component always renders an icon (lucide SVG) + text
    const svg = container.querySelector('svg')
    expect(svg).toBeInTheDocument()
  })

  it('forwards custom className to the root span', () => {
    const span = renderPill('CONFIRMED', 'sm', 'my-custom-class')
    expect(span.className).toContain('my-custom-class')
  })

  it('applies rounded-full for the pill shape', () => {
    const span = renderPill('PENDING')
    expect(span.className).toContain('rounded-full')
  })

  it('applies font-semibold for legibility', () => {
    const span = renderPill('COMPLETED')
    expect(span.className).toContain('font-semibold')
  })
})

// ─── Snapshot test ────────────────────────────────────────────────────────────

describe('BookingStatusPill — snapshots', () => {
  it('matches snapshot for PENDING sm', () => {
    const { container } = render(<BookingStatusPill status="PENDING" size="sm" />)
    expect(container.firstChild).toMatchSnapshot()
  })

  it('matches snapshot for CONFIRMED md', () => {
    const { container } = render(<BookingStatusPill status="CONFIRMED" size="md" />)
    expect(container.firstChild).toMatchSnapshot()
  })

  it('matches snapshot for COMPLETED sm', () => {
    const { container } = render(<BookingStatusPill status="COMPLETED" size="sm" />)
    expect(container.firstChild).toMatchSnapshot()
  })
})
