// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookingStatusPill — snapshots matches snapshot for COMPLETED sm 1`] = `
<span
  class="inline-flex items-center gap-1 rounded-full font-semibold bg-emerald-100 text-emerald-700 dark:bg-emerald-900/20 dark:text-emerald-400 text-xs px-2.5 py-1"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-check w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M20 6 9 17l-5-5"
    />
  </svg>
  Completed
</span>
`;

exports[`BookingStatusPill — snapshots matches snapshot for CONFIRMED md 1`] = `
<span
  class="inline-flex items-center gap-1 rounded-full font-semibold bg-blue-100 text-blue-700 dark:bg-amber-900/20 dark:text-blue-400 text-sm px-3 py-1.5"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-check-big w-4 h-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.801 10A10 10 0 1 1 17 3.335"
    />
    <path
      d="m9 11 3 3L22 4"
    />
  </svg>
  Confirmed
</span>
`;

exports[`BookingStatusPill — snapshots matches snapshot for PENDING sm 1`] = `
<span
  class="inline-flex items-center gap-1 rounded-full font-semibold bg-amber-100 text-amber-700 dark:bg-amber-900/20 dark:text-amber-400 text-xs px-2.5 py-1"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-clock w-3 h-3"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 6v6l4 2"
    />
  </svg>
  Pending
</span>
`;
